Added Donut page Exercise

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
       <header>
         <nav>
           <ul>
-            <li class="">
-              <a href="#"
+            <li class="bounce">
+              <a href="index.html"
                 ><img
                   src="img/header-logo.svg"
                   alt="Wall of Wonder. Click for home."
               /></a>
             </li>
 
-            <li class=""><a href="#">Collections</a></li>
-            <li><a href="#">About</a></li>
+            <li class="bounce"><a href="#collections">Collections</a></li>
+            <li class="bounce"><a href="index.html">About</a></li>
 
-            <li class=""><a href="#">Contact</a></li>
-            <li class=""><a href="#">Our Artists</a></li>
+            <li class="bounce"><a href="#popart">Pop Art</a></li>
+            <li class="bounce"><a href="donut.html">Donut</a></li>
           </ul>
         </nav>
       </header>
@@ -114,13 +114,13 @@
       <h2>Pop Art</h2>
       <ul>
         <li class="col-span-2 .color8">
-          <figure>
+          <figure class="color7">
             <img src="img/1-place.jpg" alt="Pop Art: This must be the place" />
             <figcaption><a href="#">The Place</a></figcaption>
           </figure>
         </li>
         <li>
-          <figure>
+          <figure class="color3">
             <img
               src="img/2-lippy.jpg"
               alt="A face showing a nose and blue lips on a white background."
@@ -129,13 +129,13 @@
           </figure>
         </li>
         <li>
-          <figure>
+          <figure class="color3">
             <img src="img/3-skull.jpg" alt="Mexican Sugar skull." />
             <figcaption><a href="#">Sugar</a></figcaption>
           </figure>
         </li>
         <li class="col-span-2">
-          <figure>
+          <figure class="color2">
             <img
               src="img/4-yell.jpg"
               alt="Red, orange, green, and yellow wedges converging on a point."
@@ -144,13 +144,13 @@
           </figure>
         </li>
         <li class="row-span-2">
-          <figure>
+          <figure class="color8">
             <img src="img/5-fork.jpg" alt="Fork on a green background." />
             <figcaption><a href="#">Fork It Up</a></figcaption>
           </figure>
         </li>
         <li>
-          <figure>
+          <figure class="color4">
             <img
               src="img/6-drip.jpg"
               alt="Rainbow paint colors dripping down a wall."
@@ -159,7 +159,7 @@
           </figure>
         </li>
         <li>
-          <figure>
+          <figure class="color6">
             <img
               src="img/7-invade.jpg"
               alt="Orange space invader on a yellow wall."
@@ -168,13 +168,13 @@
           </figure>
         </li>
         <li class="col-span-2">
-          <figure>
+          <figure class="color2">
             <img src="img/8-school.jpg" alt="Woman in sunglasses close up." />
             <figcaption><a href="#">Too Cool for School</a></figcaption>
           </figure>
         </li>
         <li class="col-span-3">
-          <figure>
+          <figure class="color4">
             <img
               src="img/9-doors.jpg"
               alt="Garage door painted to look like a Doors album cover."
@@ -239,7 +239,7 @@
       </ul>
     </section>
 
-    <footer>
+    <footer id="contact">
       <span>
         <div class="social-icons">
           <h4>Stay Connected!</h4>
